Modify selected color for device

--- a/website/app/elements/device-configuration/device-selector.html
+++ b/website/app/elements/device-configuration/device-selector.html
@@ -21,7 +21,7 @@
     }
 
     .iron-selected {
-      background-color: var(--dark-primary-color);
+      background-color: var(--accent-color);
       color: white;
     }
 
