--- a/website/app/elements/test-configuration/test-configuration.html
+++ b/website/app/elements/test-configuration/test-configuration.html
@@ -10,13 +10,18 @@
       display: block;
     }
 
-    paper-menu {
-      @apply(--layout-horizontal);
+    .tests {
+      @apply(--layout-vertical);
       @apply(--layout-center-justified);
     }
 
-    paper-item {
-      cursor: pointer;
+    paper-button {
+      background-color: var(--default-primary-color);
+      color: var(--text-primary-color);
+    }
+
+    .tests paper-button {
+      margin: 20px 25%;
     }
 
     eye-selector {
@@ -54,14 +59,12 @@
 
     div.actions {
       position: absolute;
-      bottom: 20%;
-      width: 100%;
+      bottom: 10%;
+      width: calc(100% - 60px);
     }
 
     div.actions paper-button {
       width: 45%;
-      background-color: var(--default-primary-color);
-      color: var(--text-primary-color);
     }
 
     @media (max-width: 600px) {
@@ -93,11 +96,11 @@
       id="addRecordRequest"></iron-ajax>
     <iron-pages selected="0">
       <div>
-        <paper-menu selected={{selectedTest}}>
+        <div class="tests">
           <template is="dom-repeat" items="{{tests}}">
-            <paper-item>{{item.name}}</paper-item>
+            <paper-button raised on-tap="_testSelected" name="{{item.name}}">{{item.name}}</paper-button>
           </template>
-        </paper-menu>
+        </div>
       </div>
       <div>
         <div class="eye-selector-container">
@@ -109,7 +112,7 @@
         <character-selector on-character-selected="_characterSelected"></character-selector>
         <div class="actions">
           <paper-button raised on-tap="_suggest">Suggest</paper-button>
-          <paper-button raised on-tap="_finish">Finish</paper-button>
+          <paper-button raised on-tap="finish">Finish</paper-button>
         </div>
       </div>
     </iron-pages>
@@ -125,7 +128,6 @@
         tests: Array,
         selectedTest: {
           type: String,
-          observer: '_testSelected',
           value: '-1'
         },
         currentTestConfiguration: Object
@@ -153,15 +155,13 @@
         this._clearConfiguration();
       },
 
-      _testSelected: function () {
-        if (this.selectedTest === '-1' || !this.tests) {
-          return;
-        }
+      _testSelected: function (e) {
+        this.selectedTest = e.srcElement.name;
         let query = this.$.addRecordRequest;
         this.querySelector('iron-pages').selected = '1';
-        this.querySelector('character-selector').characters = this.tests[this.selectedTest].characters;
+        this.querySelector('character-selector').characters = this.tests.filter(test => test.name === this.selectedTest)[0].characters;
         this.fire('test-started');
-        query.body = JSON.stringify({operation: 'selectTest', test: this.tests[this.selectedTest].name});
+        query.body = JSON.stringify({operation: 'selectTest', test: this.selectedTest});
         query.generateRequest();
       },
 
@@ -207,7 +207,7 @@
       _showRecord: function (configuration) {
         this.fire('new-record', {
           char: configuration.character,
-          testName: this.tests[this.selectedTest].name,
+          testName: this.selectedTest,
           degrees: configuration.detail,
           eye: configuration.eye
         });
@@ -217,9 +217,10 @@
         this.$.suggestRequest.generateRequest();
       },
 
-      _finish: function () {
+      finish: function () {
         this.$.finishRequest.generateRequest();
         this._reset();
+        this.fire('finish-test');
       },
 
       _showSuggestion: function (suggestion) {
