Fix paper-input in vertical-paper-slider

--- a/website/app/elements/test-configuration/test-configuration.html
+++ b/website/app/elements/test-configuration/test-configuration.html
@@ -141,7 +141,7 @@
 
       configure: function (configuration) {
         this._reset();
-        this.querySelector('degrees-selector').range = configuration.deviceRange;
+        this.querySelector('degrees-selector').range = {min: parseInt(configuration.deviceRange.min + 1), max: parseInt(configuration.deviceRange.max)};
         this.tests = configuration.tests;
       },
 
