Fixes on website when suggesting test

--- a/website/app/elements/test-configuration/test-configuration.html
+++ b/website/app/elements/test-configuration/test-configuration.html
@@ -228,6 +228,7 @@
         this.querySelector('character-selector').select(suggestion.character);
         this.querySelector('eye-selector').open(suggestion.eye);
         this._setConfiguration(suggestion);
+        this._notifyServer(this.$.addRecordRequest);
       },
 
       _setConfiguration: function (suggestion) {
