--- a/website/app/elements/eye-selector/eye-selector.html
+++ b/website/app/elements/eye-selector/eye-selector.html
@@ -36,6 +36,7 @@
         [].slice.call(this.querySelectorAll('eye-element'))
           .filter(eye => eye.side === eyeToOpen)
           .forEach(eye => eye.open());
+        this._closeTheOtherEye({detail: {eye: eyeToOpen}});
       },
 
       _closeTheOtherEye: function (e) {
