--- a/website/app/index.html
+++ b/website/app/index.html
@@ -35,7 +35,7 @@
   <captiom-app></captiom-app>
 
   <script>
-    PushService.openConnection('ws://192.168.1.7:8081');
+    PushService.openConnection('$pushUrl');
   </script>
 </body>
 
